--- a/index.html
+++ b/index.html
@@ -1,48 +1,340 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Заголовок страницы</title>
-    <link rel="stylesheet" href="./styles/style.css">
-
-    <meta property="og:title" content="Заголовок страницы в OG">
-    <meta property="og:description" content="Описание страницы в OG">
-    <meta property="og:image" content="https://example.com/image.jpg">
-    <meta property="og:url" content="https://example.com/">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Figma</title>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <header>
-      <h1>Личный сайт</h1>
-      <p>Который сделан на основе готового шаблона</p>
-      <nav>
+    <header class="myheader">
+      <img src="src/image-252.svg" class="free" ></img>
+      <p class="NY">Boston and New York Bear Brunt</p>
+      <img src="src/Universal.svg" class="Boston"></img>
+      <p class="date">Monday, January 1, 2018</p>
+      <img src="src/Sun.svg" class="sun"></img>
+      <p class="temp">- 23 °C</p>
+      </header>
+      <nav class="menu">
         <ul>
-          <li><a href="index.html">Эта страница</a></li>
-          <li><a href="catalog.html">Другая страница</a></li>
-        </ul>
+          <li><a href="#">NEWS</a></li>
+          <li><a href="#">OPINION</a></li>
+          <li><a href="#">SCIENCE</a></li>
+          <li><a href="#">LIFE</a></li>
+          <li><a href="#">TRAVEL</a></li>
+          <li><a href="#">MONEYS</a></li>
+          <li><a href="#">ART & DESIGN</a></li>
+          <li><a href="#">SPORTS</a></li>
+          <li><a href="#">PEOPLE</a></li>
+          <li><a href="#">HEALTH</a></li>
+          <li><a href="#">EDUCATION</a></li>
+       </ul>
       </nav>
-    </header>
-    <main>
-      <article>
-        <section>
-          <h2>Первая секция</h2>
-          <p>Она обо мне</p>
-          <img src="images/image.png" alt="Человек и пароход">
-          <p>Но может быть и о семантике, я пока не решил.</p>
-        </section>
-        <section>
-          <h2>Вторая секция</h2>
-          <p>Она тоже обо мне</p>
-        </section>
-        <section>
-          <h2>И третья</h2>
-          <p>Вы уже должны были начать догадываться.</p>
-        </section>
-      </article>
-    </main>
-    <footer>
-      <p>Сюда бы я вписал информацию об авторе и ссылки на другие сайты</p>
-    </footer>
-    <!-- сюда можно подключить jquery <script src="scripts/app.js" defer></script> -->
+      <div class="medium">
+        <ul>
+          <li>25 Songs That Tell Us Where Music Is Going
+            <img src="src/gitar.png">
+          </li>
+          <li>These Ancient Assassins Eat Their Own Kind
+            <img src="src/baterfly.png">
+          </li>
+          <li>How Do You Teach People to Love Difficult Music?
+            <img src="src/negr.png"
+          </li>
+          <li>International Soccer's Man of Mystery
+            <img src="src/road.png"
+          </li>
+        </ul>
+        <table class="firsttable">
+          <tr>
+              <td style="width: 877px; height: 570px; border-bottom: none;" rowspan="6">
+                <div class="monttd">
+                  <img src="src/Avatar.png" class="Avatar">
+                  <p style="left: 110px; top: 59px; opacity: 0.85;">By Benjamin Turner</p>
+                  <p style="top: 81px; left: 110px; opacity: 0.4; font-size: 12px; line-height: 15px;">Traveler</p>
+                  <a href="#">DESTINATIONS</a>
+                  <p class="singlname">In Southeast England, White Cliffs and Fish</p>
+                  <button class="readmore">Read more<img src="src/Arrow.svg" class="arrow"></button>
+                  <img src="src/wPlay.png" class="wPlay">
+                  <p style="top: 431px; left: 283px; opacity: 0.85;">The chalk cliff of Beachy Head</p>
+                  <p style="top: 453px; left: 283px; opacity: 0.4;font-size: 12px;line-height: 15px;">18:05</p>
+                </div>
+              </td>
+              <td class="tab11" style="height: 75px;"><p style="color: #5D5FEF;  font-weight: bold; ">RECOMMENDED FOR YOU</p></td>
+          </tr>
+          <tr>
+              <td style="position:relative; background-color: #F5F5F5;"><p style="color: #3BBDC4;">FOOD</p>
+                <p>For Chicken-Fried Steak, Too</p>     
+                <p>Much Is Just Enough </p>
+                <img src="src/Play.png" class="play" style="left:157px">
+              </td>
+          </tr>
+          <tr>
+              <td><p style="color:  #6E99AE;">CARS</p>
+                <p>Storm Has Car Dealers Doing Swift Business</p>
+              </td>
+          </tr>
+          <tr>
+              <td><p style="color:  #AC8EE3;">MOVIES</p>
+              <p>War Is Hell? In New Military Dramas, It’s One-Dimensional</p>
+              </td>
+          </tr>
+          <tr>
+              <td style="position:relative;">
+                <p style="color:  #FFA34D">NFL</p>
+                <p>11 surprising stat rankings for active NFL players</p>
+                <img src="src/Play.png" class="play">
+                </td>
+              </td>
+          </tr>
+          <tr>
+              <td style="border-bottom: none;"><p style="color: #3DC47E;">TECH REVIEWS</p>
+                <p>The bookcases you can buy online and assemble yourself</p>
+                </td>
+          </tr>
+  </table>
+  <table class="articles">
+    <tr>
+      <td style="width: 555px; height: 370px;" colspan="2">
+        <p style="width: 228px;
+        height: 15px;
+        top: 35px;
+        left: 35px;
+        font-family: Lato;
+        font-size: 12px;
+        line-height: 15px;
+        letter-spacing: 0.5px;
+        text-align: left;
+        color: #6E99AE;">CARS</p>
+        <p style="width: 238px;
+        height: 90px;
+        top: 70px;
+        left: 35px;
+        font-size: 25px;
+        font-weight: 700;
+        line-height: 30px;
+        text-align: left;"
+        class="tdtitle">The joy of replicas: A $ 5 million car <br>for $ 50,000</p>
+        <p class="tdtext" style="width: 228px;
+        height: 80px;
+        top: 185px;
+        left: 35px;
+        ">The 31-year-old self-taught engineer and former amateur 
+          racer spends his days building artful recreations of one of most iconic sports cars</p>
+        <img src="src/Car.png" class="car"/>
+        <img src="src/girl.png" class="girl"/>
+        <p style="width: 88px;
+        height: 20px;
+        top: 332px;
+        left: 75px;
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 20px;
+        text-align: left;
+        color: #5D5FEF;">Jessica Miller:</p>
+        <p class="tdtext" style="
+        width: 296px;
+        height: 20px;
+        top: 332px;
+        left: 168px;">Even as the ride-hailing service’s future remem…</p>
+        <img src="src/Comment.png" class="comment"/>
+        <p class="tdminitext" style="width: 21px;
+        height: 15px;
+        top: 335px;
+        left: 499px;">342</p>
+      </td>
+      <td style="width: 263px; height: 370px;" class="osobtd">
+        <button class="popular">Popular</button>
+        <p style="width: 203px;
+        height: 15px;
+        top: 160px;
+        left: 25px;    
+        font-family: Lato;
+        font-size: 12px;
+        line-height: 15px;
+        letter-spacing: 0.5px;
+        text-align: left;
+        color: #E7D9FF;">Art & Design</p>
+        <p style="width: 203px;
+        height: 100px;
+        top: 185px;
+        left: 25px;
+        font-family: Roboto Slab;
+        font-size: 16px;
+        line-height: 25px;
+        letter-spacing: 0.5px;
+        text-align: left;
+        color: #FFFFFF;">Invisible ink: the weird world of tattoo removal – in pictures</p>
+        <img src="src/girl.png" class="girl" style="width: 45px;
+        height: 45px;
+        top: 300px;
+        left: 25px;"/>
+        <p style="width: 148px;
+        height: 20px;
+        top: 303px;
+        left: 80px;
+        opacity: 0.85;
+        font-family: Lato;
+        font-size: 14px;
+        line-height: 20px;
+        text-align: left;
+        color: #FFFFFF;">By Sarah Jenkins</p>
+        <p style="width: 41px;
+        height: 15px;
+        top: 325px;
+        left: 80px;
+        opacity: 0.4;
+        font-family: Lato;
+        font-size: 12px;
+        line-height: 15px;
+        text-align: left;
+        color: #FFFFFF;">Sept 26</p>
+        <img src="src/Comment.png" class="comment" style="width: 15px;
+        height: 15px;
+        top: 325px;
+        left: 131px;"/>
+        <p style="width: 14px;
+        height: 15px;
+        top: 325px;
+        left: 151px;
+        opacity: 0.4;
+        font-family: Lato;
+        font-size: 12px;
+        line-height: 15px;
+        text-align: left;
+        color: #FFFFFF;">16</p>
+        <img src="src/Heart.png" class="heart"/>
+        <p style="width: 21px;
+        height: 15px;
+        top: 325px;
+        left: 195px;
+        opacity: 0.4;
+        font-family: Lato;
+        font-size: 12px;
+        line-height: 15px;
+        text-align: left;
+        color: #FFFFFF;">832</p>
+      </td>
+    </tr>
+    <tr>
+      <td style="width: 263px; height: 370px;" rowspan="2">
+        <img src="src/cat.png" class="cat"/>
+        <p class="tdtitle" style="width: 213px;
+        height: 50px;
+        top: 290px;
+        left: 25px;
+        ">200+ Doomed Cats Saved From Euthanization</p>
+      </td>
+      <td style="width: 263px; height: 170px;">
+        <p class="tdtitle">Is Coffee Bad for Bones?</p>
+        <p class="tdtext">Coffee drinkers may excrete more calcium, but it doesn’t appear to weaken bones</p>
+        <p class="tdminitext">Oct 15</p>
+      </td>
+      <td style="width: 263px; height: 170px;">
+        <p class="tdtitle">What We Manufacture</p>
+        <p class="tdtext">A global history of the factory and the modern world that all should read</p>
+        <p class="tdminitext">Oct 14</p>
+      </td>
+    </tr>
+    <tr>
+      <td style="width: 263px; height: 170px;">
+        <p class="tdtitle">It’s a Stressful World</p>
+        <p class="tdtext">Can a cruise skeptic enjoy four days on the seas with his family and a bunch of princesses?</p>
+        <p class="tdminitext">Oct 14</p>
+      </td>
+      <td style="width: 263px; height: 170px;">
+        <p class="tdtitle">A Treat for Lemon Lovers</p>
+        <p class="tdtext">This tangerine, ginger and chocolate tart has verve, depth and a hint of spice</p>
+        <p class="tdminitext">Oct 13</p>
+      </td>
+    </tr>
+  </table>
+  <ul class="blacklist">
+    <li style="height: 59px;"><p class="text" style="width: 213px;
+      height: 20px;
+      top: 20px;
+      left: 25px;
+      font-weight: bold;
+      ">COLUMNS</p></li>
+    <li style="height: 219px; width: 213px;
+    margin-left: 20px;" >
+      <img src="src/Quote.png" class="quote"/>
+      <p class="title" style="width: 203px;
+      height: 75px;
+      top: 105px;
+      left: 35px; ">Architecture is the thoughtful making of space</p>
+      <img src="src/boy.png" class="boy"/>
+      <p class="text" style="width: 138px;
+      height: 20px;
+      top: 199px;
+      left: 90px;
+      color: #D1E2EB;
+      ">David Williams</p>
+      <p class="text" style="width: 138px;
+      height: 15px;
+      top: 221px;
+      left: 90px;
+      color: #D1E2EB;
+      ">Architect</p>
+    </li>
+    <li style="height: 219px; width: 213px;
+    margin-left: 20px;">
+      <img src="src/Quote.png" class="quote" style="
+        top: 315px;"/>
+      <p class="title" style="width: 203px;
+      height: 75px;
+      top: 325px;
+      left: 35px;">The details are not the details. They make the design.</p>
+      <img src="src/winter.png" class="winter"/>
+      <p class="text" style="width: 138px;
+      height: 20px;
+      top: 419px;
+      left: 90px;
+      color: #D1E2EB;
+      ">Alexandra Green</p>
+      <p class="text" style="width: 138px;
+      height: 15px;
+      top: 441px;
+      left: 90px;
+      color: #D1E2EB;">Interior designer</p>
+    </li>
+    <li style="height: 224px;">
+      <img src="src/Quote.png" class="quote" style="
+        top: 535px;"/>
+      <p class="title" style="width: 203px;
+      height: 75px;
+      top: 545px;
+      left: 35px;
+      ">Live life to the fullest, and focus on the positive</p>
+      <img src="src/half.png" class="half"/>
+      <p class="text" style="width: 138px;
+      height: 20px;
+      top: 639px;
+      left: 90px;
+      color: #D1E2EB;
+      ">Olivia Thompson</p>
+      <p class="text" style="width: 138px;
+      height: 15px;
+      top: 661px;
+      left: 90px;
+      color: #D1E2EB;
+      ">Coacher</p>
+    </li>
+    <li style="border-bottom: none;">
+      <p class="text" style="width: 68px;
+      height: 20px;
+      top: 736px;
+      left: 97px;
+      font-weight: bold;
+      white-space: nowrap;
+      ">Read more</p>
+    </li>
+  </ul>
+      </div>
+      <div style="height: 20px; background-color: #EDEFF0;"></div>
   </body>
 </html>
