--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <title>Сайт о древних картах</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    <div class="container">
-        <h1>Древний мир и его карты</h1>
-        
+<body>      
         <div class="section">
             <div class="section-title">Древний Вавилон</div>
             <div class="section-content">
-                <p>Самые старые известные карты мира датируются древним Вавилоном 9-го века до н.э. Однако наиболее известная вавилонская карта мира — это "Imago Mundi" 600 г. до н.э. Карта, восстановленная Экхардом Унгером, показывает Вавилон на Евфрате, окруженный круглой массой суши, на которой изображены Ассирия, Урарту и несколько городов, которые, в свою очередь, окружены "горькой рекой" (Океаном), с семью островами, расположенными вокруг нее, образуя семиконечную звезду.</p>
+                <p>The oldest known world maps date back to ancient Babylon from the 9th century BC. The best known Babylonian world map, however, is the Imago Mundi of 600 BC. The map as reconstructed by Eckhard Unger shows Babylon on the Euphrates, surrounded by a circular landmass showing Assyria, Urartu and several cities, in turn surrounded by a "bitter river" (Oceanus), with seven islands arranged around it so as to form a seven-pointed star.</p>
             </div>
         </div>
 
@@ -27,6 +24,5 @@
         <div class="image">
             <img src="image.png" alt="Древний Вавилонский мир">
         </div>
-    </div>
 </body>
 </html>
