--- a/index.html
+++ b/index.html
@@ -3,25 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Сайт о древних картах</title>
+    <title>Центрированный блок для текста</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>      
-        <div class="section">
-            <div class="section-content">
-                <p>The oldest known world maps date back to ancient Babylon from the 9th century BC. The best known Babylonian world map, however, is the Imago Mundi of 600 BC. The map as reconstructed by Eckhard Unger shows Babylon on the Euphrates, surrounded by a circular landmass showing Assyria, Urartu and several cities, in turn surrounded by a "bitter river" (Oceanus), with seven islands arranged around it so as to form a seven-pointed star.</p>
-            </div>
-        </div>
-
-        <div class="section">
-            <div class="section-title">Материал по теме</div>
-            <div class="section-content">
-                <p>Идеи Анаксимандра: считавшегося позднейшими греческими писателями настоящим основателем географии, дошли до нас через фрагменты, цитируемые его последователями. В эссе "Overstating the Arab State" Назиха Айюби и "Is Jordan Palestine?" Рафаэля Израиля авторы рассматривают психологически фрагментированную постколониальную идентичность.</p>
-            </div>
-        </div>
-
-        <div class="image">
-            <img src="image.png" alt="Древний Вавилонский мир">
-        </div>
+<body>
+    <div class="centered-block">
+        <p>The oldest known world maps date back to ancient Babylon from the 9th century BC. The best known Babylonian world map, however, is the Imago Mundi of 600 BC. The map as reconstructed by Eckhard Unger shows Babylon on the Euphrates, surrounded by a circular landmass showing Assyria, Urartu and several cities, in turn surrounded by a "bitter river" (Oceanus), with seven islands arranged around it so as to form a seven-pointed star.</p>
+    </div>
 </body>
 </html>
