--- a/index.html
+++ b/index.html
@@ -1,14 +1,128 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Центрированный блок для текста</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <div class="centered-block">
-        <p>The oldest known world maps date back to ancient Babylon from the 9th century BC. The best known Babylonian world map, however, is the Imago Mundi of 600 BC. The map as reconstructed by Eckhard Unger shows Babylon on the Euphrates, surrounded by a circular landmass showing Assyria, Urartu and several cities, in turn surrounded by a "bitter river" (Oceanus), with seven islands arranged around it so as to form a seven-pointed star.</p>
+<meta charset="UTF-8">
+<meta name="author" content="Ваше имя">
+<meta name="description" content="Описание вашей страницы">
+<meta name="keywords" content="ключевые, слова, для, поисковиков">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Заголовок страницы</title>
+<link rel="stylesheet" href="style.css">
+<article class="article-container">
+  <div class="article-content">
+    <div class="article-wrapper">
+      <div class="article-grid">
+        <div class="main-text">
+          <div class="article-text">
+            <p>The oldest known world maps date back to ancient Babylon from the 9th century BC. The best known Babylonian world map, however, is the Imago Mundi of 600 BC. The map as reconstructed by Eckhard Unger shows Babylon on the Euphrates, surrounded by a circular landmass showing Assyria, Urartu and several cities, in turn surrounded by a "bitter river" (Oceanus), with seven islands arranged around it so as to form a seven-pointed star.</p>
+            <p>The accompanying text mentions seven outer regions beyond the encircling ocean. The descriptions of five of them have survived. In contrast to the Imago Mundi, an earlier Babylonian world map dating back to the 9th century BC depicted Babylon as being further north from the center of the world, though it is not certain what that center was supposed to represent.</p>
+            <p>The ideas of Anaximander: considered by later Greek writers to be the true founder of geography, come to us through fragments quoted by his successors. Anaximander is credited with the invention of the gnomon, the simple, yet efficient Greek instrument that allowed the early measurement of latitude. Thales is also credited with the prediction of eclipses. The foundations of geography can be traced to the ancient cultures, such as the ancient, medieval, and early modern Chinese.</p>
+          </div>
+        </div>
+        
+        <aside class="sidebar">
+          <div class="sidebar-content">
+            <h2 class="theme-title">Material on Theme</h2>
+            <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/837f6e647a6651e2cbf7aa658a9de24b168cb6609eb97633f5c7dad21ba513cd?apiKey=99443c66e7c44752af401d9f85727059&" alt="Theme illustration" class="theme-image" />
+            <h3 class="theme-heading">Application of Postcolonial Theory in the Middle East</h3>
+            <p class="theme-description">In the essays "Overstating the Arab State", by Nazih Ayubi, and "Is Jordan Palestine?", by Raphael Israel, the authors deal with the psychologically fragmented postcolonial identity.</p>
+            <div class="stats-container">
+              <div class="stat-item">
+                <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/1600ffc25582fa02c8e4b34f8a267ebc59c90736c9362a9f723d5661ad20ec79?apiKey=99443c66e7c44752af401d9f85727059&" alt="" class="stat-icon" />
+                <span>1,623</span>
+              </div>
+              <div class="stat-item">
+                <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/ef075e54f053f2ae8a592b4ef5dddabb791a37622c6d4cf9f030daa1d9b36c03?apiKey=99443c66e7c44752af401d9f85727059&" alt="" class="stat-icon" />
+                <span>102</span>
+              </div>
+            </div>
+          </div>
+        </aside>
+      </div>
     </div>
-</body>
-</html>
+  </div>
+
+  <blockquote class="quote-section">
+    <div class="quote-container">
+      <div class="quote-grid">
+        <div class="quote-text">
+          <p class="quote-content">Names of places... are not geography... know by heart a whole gazetteer full of them would not, in itself, constitute anyone a geographer. Geography has higher aims than this: it seeks to classify phenomena.</p>
+        </div>
+        <div class="author-column">
+          <div class="author-info">
+            <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/52c26ca7a75ff2233bf16e3b40d60ca490e403f1bc5fa9ea83a4ef7b8d3e7368?apiKey=99443c66e7c44752af401d9f85727059&" alt="William Peterson" class="author-image" />
+            <span class="author-name">William Peterson</span>
+            <span class="author-title">Travel Agent</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </blockquote>
+
+  <p class="article-paragraph">The Greeks, who were the first to explore geography as both art and science, achieved this through Cartography, Philosophy, and Literature, or through Mathematics. There is some debate about who was the first person to assert that the Earth is spherical in shape, with the credit going either to Parmenides or Pythagoras. Anaxagoras was able to demonstrate that the profile of the Earth was circular by explaining eclipses. However, he still believed that the Earth was a flat disk, as did many of his contemporaries.</p>
+
+  <p class="article-paragraph">The first rigorous system of latitude and longitude lines is credited to Hipparchus. He employed a sexagesimal system that was derived from Babylonian mathematics.</p>
+
+  <nav class="tag-section" aria-label="Article tags">
+    <div class="tag-container">
+      <span class="tag">Travel</span>
+      <span class="tag">Destinations</span>
+      <span class="tag">Nature</span>
+      <span class="tag">World</span>
+      <span class="tag">Alaska</span>
+    </div>
+  </nav>
+
+  <hr class="divider" />
+
+  <div class="social-section">
+    <div class="social-container">
+      <button class="social-button like">
+        <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/d8c52bee15568dabe923f003c38a8607dbb19771f48008f0bd435f4fb798efc9?apiKey=99443c66e7c44752af401d9f85727059&" alt="" class="social-icon" />
+        <div class="social-text">
+          <span class="social-label">Like it</span>
+          <span class="social-count">42</span>
+        </div>
+      </button>
+      <button class="social-button share">
+        <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/925dfed1ba936b96973c0d0ba2e2c2ca2a6cc0fcb56eaae3c682ba02339a04ad?apiKey=99443c66e7c44752af401d9f85727059&" alt="" class="social-icon" />
+        <div class="social-text">
+          <span class="social-label">Share</span>
+          <span class="social-count share">80</span>
+        </div>
+      </button>
+      <button class="social-button tweet">
+        <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/eb4010eff8f7563b1a8d99b964245f35efa5b2c1687cd0118ff366dcb6eb06af?apiKey=99443c66e7c44752af401d9f85727059&" alt="" class="social-icon" />
+        <div class="social-text">
+          <span class="social-label">Tweet</span>
+          <span class="social-count tweet">33</span>
+        </div>
+      </button>
+      <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/a2f80f3dec7311220b6549354d4fde4e6eaee47e478fa296074b1329cb69da68?apiKey=99443c66e7c44752af401d9f85727059&" alt="Additional sharing options" class="social-icon" />
+    </div>
+  </div>
+
+  <section class="comments-section">
+    <div class="comments-header">
+      <h2 class="comments-title">Comments</h2>
+      <button class="add-comment">
+        <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/85911d925bd212e55d91c9a6fb18be11f14faab3b01a0c6c485575e00fc42962?apiKey=99443c66e7c44752af401d9f85727059&" alt="" class="social-icon" />
+        <span>Add comment</span>
+      </button>
+    </div>
+    <hr class="divider" />
+    <form class="comment-form">
+      <div class="form-container">
+        <label for="comment" class="form-title">What do you think?</label>
+        <div class="form-content">
+          <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/81bbb55d4a608e9a25c9d6b69f0fa4d960f3f425cc757beb0a9966055b198a90?apiKey=99443c66e7c44752af401d9f85727059&" alt="User avatar" class="author-image" />
+          <textarea id="comment" class="visually-hidden" aria-label="Enter your comment"></textarea>
+        </div>
+        <button type="submit" class="submit-button">
+          <span class="submit-text">Submit</span>
+          <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/66564396b7b83a7480cf97e6221d04e1f644af4655efea1fbfa7c6417f5887c3?apiKey=99443c66e7c44752af401d9f85727059&" alt="" class="submit-icon" />
+        </button>
+      </div>
+    </form>
+  </section>
+</article>
