--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
     </div>
     <hr class="divider" />
     <form class="comment-form">
+      <div class="ramka">
+        <img src="photo/Shape.png" alt ="shape">
       <div class="form-container">
         <label for="comment" class="form-title">What do you think?</label>
         <div class="form-content">
