--- a/index.html
+++ b/index.html
@@ -130,3 +130,207 @@
     </form>
   </section>
 </article>
+
+
+
+
+
+
+
+  <div class="featured-section flex overflow-hidden flex-col">
+  <div
+    class="flex overflow-hidden relative flex-col justify-center items-center px-16 py-20 w-full fill-neutral-100 min-h-[425px] max-md:px-5 max-md:max-w-full"
+    role="region" 
+    aria-label="Featured Articles"
+  >
+    <img
+      loading="lazy"
+      src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/7959763e450e6011119f24dfd87a034737fdb81a098b9378199445f7e0d0e270?apiKey=99443c66e7c44752af401d9f85727059&"
+      class="object-cover absolute inset-0 size-full"
+      alt="Featured section background"
+      aria-hidden="true"
+    />
+    <div class="relative w-full max-w-[1140px] max-md:max-w-full">
+      <div class="flex gap-5 max-md:flex-col">
+        <div class="flex flex-col w-[51%] max-md:ml-0 max-md:w-full">
+          <div
+            class="flex relative flex-col w-full max-md:mt-7 max-md:max-w-full"
+          >
+            <div class="max-md:max-w-full">
+              <div class="flex gap-5 max-md:flex-col">
+                <div class="flex flex-col w-6/12 max-md:ml-0 max-md:w-full">
+                  <article 
+                    class="flex flex-col grow text-base font-bold leading-6 text-gray-800 max-md:mt-7"
+                  >
+                    <img
+                      loading="lazy"
+                      src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/178c29796d607d66595fec9e2e72e72adde52ce21e1839192baf43b2fa4c0f67?apiKey=99443c66e7c44752af401d9f85727059&"
+                      class="object-contain w-full rounded-xl aspect-[1.46]"
+                      alt="Singaporean Food Article Cover"
+                    />
+                    <a 
+                      href="#"
+                      class="article-link mt-4 w-[263px] hover:underline focus:outline-none focus:ring-2 focus:ring-blue-500"
+                      tabindex="0"
+                    >
+                      An Evangelist of Singaporean Food Has a New Pulpit
+                    </a>
+                  </article>
+                </div>
+                <div class="flex flex-col ml-5 w-6/12 max-md:ml-0 max-md:w-full">
+                  <article
+                    class="flex flex-col grow text-base font-bold leading-6 text-gray-800 max-md:mt-7"
+                  >
+                    <img
+                      loading="lazy"
+                      src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/aed3f0110a61fd753c0576de7c55e62eafef2ccb5a525597e7f2346ce82be659?apiKey=99443c66e7c44752af401d9f85727059&"
+                      class="object-contain w-full rounded-xl aspect-[1.46]"
+                      alt="Mississippi River Article Cover"
+                    />
+                    <a 
+                      href="#"
+                      class="article-link mt-4 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-500"
+                      tabindex="0"
+                    >
+                      At the Mouth of the Mississippi, a Weird and Fragile Beauty
+                    </a>
+                  </article>
+                </div>
+              </div>
+            </div>
+            <div
+              class="stats-container flex gap-10 mt-4 max-w-full text-xs leading-none whitespace-nowrap text-neutral-400 w-[394px]"
+            >
+              <div class="flex flex-1 gap-2.5">
+                <div class="flex gap-1.5" aria-label="1,904 views">
+                  <img
+                    loading="lazy"
+                    src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/e660f433b9a6577ef07dcf05841264016cd6bb1ecd38c32721bd131d943dbf31?apiKey=99443c66e7c44752af401d9f85727059&"
+                    class="object-contain shrink-0 aspect-square w-[15px]"
+                    alt=""
+                    aria-hidden="true"
+                  />
+                  <div>1,904</div>
+                </div>
+                <div class="flex gap-1.5" aria-label="82 comments">
+                  <img
+                    loading="lazy"
+                    src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/ef075e54f053f2ae8a592b4ef5dddabb791a37622c6d4cf9f030daa1d9b36c03?apiKey=99443c66e7c44752af401d9f85727059&"
+                    class="object-contain shrink-0 aspect-square w-[15px]"
+                    alt=""
+                    aria-hidden="true"
+                  />
+                  <div>82</div>
+                </div>
+              </div>
+              <div class="flex flex-1 gap-2.5">
+                <div class="flex gap-1.5" aria-label="2,873 views">
+                  <img
+                    loading="lazy"
+                    src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/e660f433b9a6577ef07dcf05841264016cd6bb1ecd38c32721bd131d943dbf31?apiKey=99443c66e7c44752af401d9f85727059&"
+                    class="object-contain shrink-0 aspect-square w-[15px]"
+                    alt=""
+                    aria-hidden="true"
+                  />
+                  <div>2,873</div>
+                </div>
+                <div class="flex gap-1.5" aria-label="982 comments">
+                  <img
+                    loading="lazy"
+                    src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/ef075e54f053f2ae8a592b4ef5dddabb791a37622c6d4cf9f030daa1d9b36c03?apiKey=99443c66e7c44752af401d9f85727059&"
+                    class="object-contain shrink-0 aspect-square w-[15px]"
+                    alt=""
+                    aria-hidden="true"
+                  />
+                  <div>982</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-col ml-5 w-[24%] max-md:ml-0 max-md:w-full">
+          <article class="flex relative flex-col w-full max-md:mt-7">
+            <img
+              loading="lazy"
+              src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/2cfc0967ae8fae6eeb1b9f726f79ba0bde167ff59987aaba468948cce9c3d4b9?apiKey=99443c66e7c44752af401d9f85727059&"
+              class="object-contain w-full rounded-xl aspect-[1.46]"
+              alt="Chattanooga Article Cover"
+            />
+            <a 
+              href="#"
+              class="article-link mt-4 text-base font-bold leading-6 text-gray-800 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-500"
+              tabindex="0"
+            >
+              Chattanooga Is Changing. But Its Charms Remain.
+            </a>
+            <div
+              class="stats-container flex gap-2.5 self-start mt-4 text-xs leading-none whitespace-nowrap text-neutral-400"
+            >
+              <div class="flex gap-1.5" aria-label="821 views">
+                <img
+                  loading="lazy"
+                  src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/e660f433b9a6577ef07dcf05841264016cd6bb1ecd38c32721bd131d943dbf31?apiKey=99443c66e7c44752af401d9f85727059&"
+                  class="object-contain shrink-0 aspect-square w-[15px]"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <div>821</div>
+              </div>
+              <div class="flex gap-1.5" aria-label="30 comments">
+                <img
+                  loading="lazy"
+                  src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/ef075e54f053f2ae8a592b4ef5dddabb791a37622c6d4cf9f030daa1d9b36c03?apiKey=99443c66e7c44752af401d9f85727059&"
+                  class="object-contain shrink-0 aspect-square w-[15px]"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <div>30</div>
+              </div>
+            </div>
+          </article>
+        </div>
+        <div class="flex flex-col ml-5 w-[24%] max-md:ml-0 max-md:w-full">
+          <article class="flex relative flex-col w-full max-md:mt-7">
+            <img
+              loading="lazy"
+              src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/29a72b926a8d498cd05b495ad416d0bdd973eaab038af299ca14eb64bce3d43c?apiKey=99443c66e7c44752af401d9f85727059&"
+              class="object-contain w-full rounded-xl aspect-[1.46]"
+              alt="Language Travel Guide Article Cover"
+            />
+            <a 
+              href="#"
+              class="article-link mt-4 text-base font-bold leading-6 text-gray-800 hover:underline focus:outline-none focus:ring-2 focus:ring-blue-500"
+              tabindex="0"
+            >
+              How to Get by in a Country if You Don't Know the Language
+            </a>
+            <div
+              class="stats-container flex gap-2.5 self-start mt-4 text-xs leading-none whitespace-nowrap text-neutral-400"
+            >
+              <div class="flex gap-1.5" aria-label="5,030 views">
+                <img
+                  loading="lazy"
+                  src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/e660f433b9a6577ef07dcf05841264016cd6bb1ecd38c32721bd131d943dbf31?apiKey=99443c66e7c44752af401d9f85727059&"
+                  class="object-contain shrink-0 aspect-square w-[15px]"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <div>5,030</div>
+              </div>
+              <div class="flex gap-1.5" aria-label="495 comments">
+                <img
+                  loading="lazy"
+                  src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/ef075e54f053f2ae8a592b4ef5dddabb791a37622c6d4cf9f030daa1d9b36c03?apiKey=99443c66e7c44752af401d9f85727059&"
+                  class="object-contain shrink-0 aspect-square w-[15px]"
+                  alt=""
+                  aria-hidden="true"
+                />
+                <div>495</div>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
