--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
          <img src="photo/two.png" alt ="one">
         </div>
         <div class="form-three">
-         <img src="photo/one.png" alt ="three">
+         <img src="photo/three.png" alt ="three">
         </div>
         <div class="form-four">
-         <img src="photo/one.png" alt ="four">
+         <img src="photo/four.png" alt ="four">
         </div>
         
         <div class="ramka">
