--- a/index.html
+++ b/index.html
@@ -120,7 +120,12 @@
         <div class="form-four">
          <img src="photo/four.png" alt ="four">
         </div>
-    </form>
+</form>
+
+<!-- <div>
+  <div class="rectangle">
+    
+</div> -->
 
 
   
