--- a/index.html
+++ b/index.html
@@ -124,10 +124,9 @@
          <img src="photo/four.png" alt ="four">
         </div>
 </form> -->
-<div class="rectangle">
-
+<div>
+<element class="rectangle">
 </div>
-
   
   
   <section class="comments-section">
