--- a/index.html
+++ b/index.html
@@ -124,9 +124,10 @@
          <img src="photo/four.png" alt ="four">
         </div>
 </form> -->
-<div>
-<element class="rectangle">
+<div class="rectangle">
+
 </div>
+
   
   
   <section class="comments-section">
