--- a/index.html
+++ b/index.html
@@ -124,11 +124,21 @@
          <img src="photo/four.png" alt ="four">
         </div>
 </form> -->
-<div class="rectangle">
+<!-- <div class="rectangle">
+  <img src="photo/one.png" alt="1">
+</div> -->
 
-</div>
+<section class="rectangle">
+  <div>
+    <div class="photo1">
+      <img src="photo/one.png" alt="1">
+    </div>
+    <div class="photo2">
+      <img src="photo/two.png" alt="2">
+    </div>
+  </div>
+</section>  
 
-  
   
   <section class="comments-section">
     <div class="comments-header">
