--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
     <div class="photo2">
       <img src="photo/two.png" alt="2">
     </div>
+    <div class="photo3">
+      <img src="photo/three.png" alt="4">
+    </div>
+    <div class="photo4">
+      <img src="photo/four.png" alt="3">
+    </div>
   </div>
 </section>  
 
