--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
     <div class="photo4">
       <img src="photo/four.png" alt="3">
     </div>
+
+    <div class="text1">An Evangelist of Singaporean Food Has a New Pulpit</div>
+    <div class="text2">At the Mouth of the Mississippi, a Weird and Fragile Beauty</div>
+    <div class="text3">Chattanooga Is Changing. But Its Charms Remain.</div>
+    <div class="text4">How to Get by in a Country if You Don’t Know the Language</div>
   </div>
 </section>  
 
