--- a/index.html
+++ b/index.html
@@ -134,6 +134,19 @@
     <div class="eye4">
       <img src="photo/Eye.svg" alt="3">
     </div>
+
+    <div class="com1">
+      <img src="photo/Comment.svg" alt="1">
+    </div>
+    <div class="com2">
+      <img src="photo/Comment.svg" alt="2">
+    </div>
+    <div class="com3">
+      <img src="photo/Comment.svg" alt="4">
+    </div>
+    <div class="eye4">
+      <img src="photo/Comment.svg" alt="3">
+    </div>
   </div>
 </section>  
 
