--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="com3">
       <img src="photo/Comment.svg" alt="4">
     </div>
-    <div class="eye4">
+    <div class="com4">
       <img src="photo/Comment.svg" alt="3">
     </div>
   </div>
