--- a/index.html
+++ b/index.html
@@ -147,6 +147,11 @@
     <div class="com4">
       <img src="photo/Comment.svg" alt="3">
     </div>
+
+    <div class="texteye1">1,904</div>
+    <div class="texteye2">2,873</div>
+    <div class="texteye3">821</div>
+    <div class="texteye4">5,030</div>
   </div>
 </section>  
 
