--- a/index.html
+++ b/index.html
@@ -152,6 +152,11 @@
     <div class="texteye2">2,873</div>
     <div class="texteye3">821</div>
     <div class="texteye4">5,030</div>
+    
+    <div class="textcom1">82</div>
+    <div class="textcom2">982</div>
+    <div class="textcom3">30</div>
+    <div class="textcom4">495</div>
   </div>
 </section>  
 
