--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         
         <label for="comment" class="form-title">What do you think?</label>
         <div class="form-content">
-          <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/81bbb55d4a608e9a25c9d6b69f0fa4d960f3f425cc757beb0a9966055b198a90?apiKey=99443c66e7c44752af401d9f85727059&" alt="User avatar" class="author-image" />
+          <img src="photo/girl.svg" alt="User avatar" class="author-image" />
           <textarea id="comment" class="visually-hidden" aria-label="Enter your comment"></textarea>
         </div>
         <div class="ramka">
