--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         <img src="photo/Shape.png" alt ="shape">
         <button type="submit" class="submit-button">
           <span class="submit-text">Submit</span>
-          <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/66564396b7b83a7480cf97e6221d04e1f644af4655efea1fbfa7c6417f5887c3?apiKey=99443c66e7c44752af401d9f85727059&" alt="" class="submit-icon" />
+          <img src="photo/Arrow.svg" alt="" class="submit-icon" />
         </button>
       </div>
     </form>
