--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <div class="comments-header">
       <h2 class="comments-title">Comments</h2>
       <button class="add-comment">
-        <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/85911d925bd212e55d91c9a6fb18be11f14faab3b01a0c6c485575e00fc42962?apiKey=99443c66e7c44752af401d9f85727059&" alt="" class="social-icon" />
+        <img src="photo/Pencil.svg" alt="" class="social-icon" />
         <span>Add comment</span>
       </button>
     </div>
