--- a/index.html
+++ b/index.html
@@ -78,27 +78,27 @@
   <div class="social-section">
     <div class="social-container">
       <button class="social-button like">
-        <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/d8c52bee15568dabe923f003c38a8607dbb19771f48008f0bd435f4fb798efc9?apiKey=99443c66e7c44752af401d9f85727059&" alt="" class="social-icon" />
+        <img src="photo/Heart.svg" alt="" class="social-icon" />
         <div class="social-text">
           <span class="social-label">Like it</span>
           <span class="social-count">42</span>
         </div>
       </button>
       <button class="social-button share">
-        <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/925dfed1ba936b96973c0d0ba2e2c2ca2a6cc0fcb56eaae3c682ba02339a04ad?apiKey=99443c66e7c44752af401d9f85727059&" alt="" class="social-icon" />
+        <img src="photo/Shape.svg" alt="" class="social-icon" />
         <div class="social-text">
           <span class="social-label">Share</span>
           <span class="social-count share">80</span>
         </div>
       </button>
       <button class="social-button tweet">
-        <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/eb4010eff8f7563b1a8d99b964245f35efa5b2c1687cd0118ff366dcb6eb06af?apiKey=99443c66e7c44752af401d9f85727059&" alt="" class="social-icon" />
+        <img src="photo/Twitter.svg" alt="" class="social-icon" />
         <div class="social-text">
           <span class="social-label">Tweet</span>
           <span class="social-count tweet">33</span>
         </div>
       </button>
-      <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/a2f80f3dec7311220b6549354d4fde4e6eaee47e478fa296074b1329cb69da68?apiKey=99443c66e7c44752af401d9f85727059&" alt="Additional sharing options" class="social-icon" />
+      <img src="photo/Round.svg" alt="Additional sharing options" class="social-icon" />
     </div>
   </div>
 
