--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <aside class="sidebar">
           <div class="sidebar-content">
             <h2 class="theme-title">Material on Theme</h2>
-            <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/837f6e647a6651e2cbf7aa658a9de24b168cb6609eb97633f5c7dad21ba513cd?apiKey=99443c66e7c44752af401d9f85727059&" alt="Theme illustration" class="theme-image" />
+            <img src="photo/Giraffe.svg" alt="Theme illustration" class="theme-image" />
             <h3 class="theme-heading">Application of Postcolonial Theory in the Middle East</h3>
             <p class="theme-description">In the essays "Overstating the Arab State", by Nazih Ayubi, and "Is Jordan Palestine?", by Raphael Israel, the authors deal with the psychologically fragmented postcolonial identity.</p>
             <div class="stats-container">
@@ -50,7 +50,7 @@
         </div>
         <div class="author-column">
           <div class="author-info">
-            <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/52c26ca7a75ff2233bf16e3b40d60ca490e403f1bc5fa9ea83a4ef7b8d3e7368?apiKey=99443c66e7c44752af401d9f85727059&" alt="William Peterson" class="author-image" />
+            <img src="photo/boy.svg" alt="William Peterson" class="author-image" />
             <span class="author-name">William Peterson</span>
             <span class="author-title">Travel Agent</span>
           </div>
