--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
             <p class="theme-description">In the essays "Overstating the Arab State", by Nazih Ayubi, and "Is Jordan Palestine?", by Raphael Israel, the authors deal with the psychologically fragmented postcolonial identity.</p>
             <div class="stats-container">
               <div class="stat-item">
-                <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/1600ffc25582fa02c8e4b34f8a267ebc59c90736c9362a9f723d5661ad20ec79?apiKey=99443c66e7c44752af401d9f85727059&" alt="" class="stat-icon" />
+                <img src="photo/Eye.svg" alt="" class="stat-icon" />
                 <span>1,623</span>
               </div>
               <div class="stat-item">
-                <img src="https://cdn.builder.io/api/v1/image/assets/99443c66e7c44752af401d9f85727059/ef075e54f053f2ae8a592b4ef5dddabb791a37622c6d4cf9f030daa1d9b36c03?apiKey=99443c66e7c44752af401d9f85727059&" alt="" class="stat-icon" />
+                <img src="photo/Comment.svg" alt="" class="stat-icon" />
                 <span>102</span>
               </div>
             </div>
@@ -85,7 +85,7 @@
         </div>
       </button>
       <button class="social-button share">
-        <img src="photo/Shape.svg" alt="" class="social-icon" />
+        <img src="photo/Facebook.svg" alt="" class="social-icon" />
         <div class="social-text">
           <span class="social-label">Share</span>
           <span class="social-count share">80</span>
