--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Заголовок страницы</title>
 <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;900&display=swap" rel="stylesheet"> <!-- Подключаем шрифт Lato Regular и Heavy -->
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet"> <!-- Подключаем шрифт Roboto Slab Bold -->
 <article class="article-container">
   <div class="article-content">
     <div class="article-wrapper">
