--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
         <div class="quote-text">
           <p class="quote-content">Names of places... are not geography... know by heart a whole gazetteer full of them would not, in itself, constitute anyone a geographer. Geography has higher aims than this: it seeks to classify phenomena.</p>
         </div>
+        <div class = "quoteimg">
+          <img src="photo/Quote.svg" alt="quote"/>
+        </div>
         <div class="author-column">
           <div class="author-info">
             <img src="photo/boy.svg" alt="William Peterson" class="author-image" />
