--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@
     <div class="quote-container">
       <div class="quote-grid">
         <div class="quote-text">
+          <img src="photo/Quote.svg" alt="quote" class="quote-icon" />
           <p class="quote-content">Names of places... are not geography... know by heart a whole gazetteer full of them would not, in itself, constitute anyone a geographer. Geography has higher aims than this: it seeks to classify phenomena.</p>
-        </div>
-        <div class = "quoteimg">
-          <img src="photo/Quote.svg" alt="quote">
         </div>
         <div class="author-column">
           <div class="author-info">
